--- a/src/main/resources/static/CSS/main.css
+++ b/src/main/resources/static/CSS/main.css
@@ -21,3 +21,15 @@
 .width {
 	width:40%;
 }
+.table-width {
+	width:80%;
+}
+.col-width{
+	width: 20%
+}
+.col2-width{
+	width: 15%
+}
+.id-width{
+	width: 5%
+}
